benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe009_power.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe009_power.opt.yml/safe009_power.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe009_power.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_y341o14j/tmp/tmpvr__php9.c
Compilation started
/tmp/BenchExec_run_y341o14j/tmp/tmpvr__php9.c: In function ‘P1’:
/tmp/BenchExec_run_y341o14j/tmp/tmpvr__php9.c:610:19: error: ‘TRUE’ undeclared (first use in this function)
  610 |   weak$$choice0 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_y341o14j/tmp/tmpvr__php9.c:610:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_y341o14j/tmp/tmpvr__php9.c:614:19: error: ‘FALSE’ undeclared (first use in this function)
  614 |   weak$$choice1 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_y341o14j/tmp/tmpvr__php9.c: In function ‘main’:
/tmp/BenchExec_run_y341o14j/tmp/tmpvr__php9.c:706:19: error: ‘TRUE’ undeclared (first use in this function)
  706 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
